--- a/my-website/src/components/Porfolio/portfolio.css
+++ b/my-website/src/components/Porfolio/portfolio.css
@@ -1,12 +1,12 @@
 .portfolio__container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 2.5rem;
 }
 
 .portfolio__item {
   background: var(--color-bg-variant);
-  padding: 1.2rem;
+  padding: 1.3rem;
   border-radius: 2rem;
   border: 1px solid transparent;
   transition: var(--transition);
@@ -31,6 +31,7 @@
   display: flex;
   justify-content: center;
   margin-bottom: 1rem;
+  gap: 1rem;
 }
 
 /* =============== MEDIA QUERIES (MEDIUM DEVICES)====================== */
