--- a/my-website/src/components/Porfolio/portfolio.css
+++ b/my-website/src/components/Porfolio/portfolio.css
@@ -24,6 +24,8 @@
 
 .portfolio__item h3 {
   margin: 1.2rem 0 2rem;
+  display: flex;
+  justify-content: center;
 }
 
 /* gap: 1rem; */
@@ -34,7 +36,7 @@
   gap: 1rem;
 }
 
-/* =============== MEDIA QUERIES (MEDIUM DEVICES)====================== */
+
 @media screen and (max-width: 1024px) {
   .portfolio__container {
     grid-template-columns: 1fr 1fr;
@@ -42,7 +44,7 @@
   }
 }
 
-/* =============== MEDIA QUERIES (SMALL DEVICES)====================== */
+
 @media screen and (max-width: 600px) {
   .portfolio__container {
     grid-template-columns: 1fr;
