--- a/my-website/src/index.css
+++ b/my-website/src/index.css
@@ -11,6 +11,7 @@
 }
 
 :root {
+  /* --color-bg: #1f1f38; */
   --color-bg: #1f1f38;
   --color-bg-variant: #2c2c6c;
   --color-primary: #4db5ff;
@@ -35,18 +36,17 @@ html {
 
 body {
   font-family: 'Poppins', sans-serif;
-  /* background: linear-gradient(60deg,
+  background: linear-gradient(60deg,
     rgb(54, 4, 46) 0%,
-    #300171 30%,
-    rgb(43, 3, 135)); */
-    background: var(--color-bg);
+    #1f1f38 30%,
+    rgb(43, 3, 135));
+    /* background: var(--color-bg);  */
   color: var(--color-white);
   line-height:  1.7;
-  background-image: url(../src/assets/bg-texture.png);
+  /* background-image: url(../src/assets/bg-texture.png); */
 }
 
 
-/* =============== GENERAL STYLES ============= */
 
 .container {
   width: var(--container-width-lg);
