--- a/my-website/src/components/Services/services.css
+++ b/my-website/src/components/Services/services.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 3rem;
-  justify-content: space-around;
+  /* justify-content: space-around; */
 }
 
 .service {
